--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node run-tests.js",
     "start": "node --env-file=.env src/index.js",
     "dev": "nodemon --env-file=.env src/index.js"
   },
